--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,27 @@
 {
-	"extends": [
-		"standard",
+  "extends": [
+    "standard",
 
-		"plugin:react/recommended",
+    "plugin:react/recommended",
 
-		"plugin:tailwindcss/recommended",
+    "plugin:tailwindcss/recommended",
 
-		"prettier"
-	],
-	"rules": {
-		"max-len": [2, 250],
+    "prettier",
 
-		"no-multiple-empty-lines": [
-			"error",
-			{
-				"max": 1,
+    "plugin:@react-three/recommended"
+  ],
+  "rules": {
+    "max-len": [2, 250],
 
-				"maxEOF": 1
-			}
-		],
+    "no-multiple-empty-lines": [
+      "error",
+      {
+        "max": 1,
 
-		"object-curly-newline": 0
-	}
+        "maxEOF": 1
+      }
+    ],
+
+    "object-curly-newline": 0
+  }
 }
